force-app/main/default/objects/Logic_Expression__mdt/Logic_Expression__mdt.object-meta.xml
<CustomObject>
    <label>Logic Expression</label>
    <pluralLabel>Logic Expressions</pluralLabel>
</CustomObject>