force-app/main/default/objects/Logic_Expression__mdt/fields/Logic_String__c.field-meta.xml
<CustomField>
    <fullName>Logic_String__c</fullName>
    <label>Logic String</label>
    <length>50</length>
    <type>Text</type>
</CustomField>