force-app/main/default/objects/Logic_Expression__mdt/fields/Match_Case_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Match_Case_By_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Case By Default</label>
    <type>Checkbox</type>
</CustomField>